Changed cat API

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-
     <title>Cats!</title>
   </head>
   <body>
     <div class="container">
+      <h1>Just Cats!</h1>
+      <h3>Ease your stress</h3>
       <img class="cat-photo" src="" alt="gato" id="cat" />
       <button id="changeCat" class="button">Change</button>
     </div>
